Submit button runs the algorithm

--- a/Website HTML and PHP files/The Next _Cancer Can't.html
+++ b/Website HTML and PHP files/The Next _Cancer Can't.html
@@ -406,12 +406,13 @@
               <textarea class="input-text expand " name="comments" title="" style="margin: 0px; height: 72px; width: 467px;"></textarea>
 
               <div class="text-center ">
-                <input type="submit" name="submit" value="Submit">
+
               </div>
             </form>
-
           </div>
-
+        <form action ="retrieve_dbData.php" method="get">
+            <input type="submit" name="submit" value="Submit">
+        </form>
 
 
           <!-- footer -->
@@ -451,6 +452,7 @@
                     <input type="submit" class="footer_signup__submit" value="Join" name="subscribe">
                   </form>
                 </div>
+
 
                 <div class="footer-info">
                   <span class="legal">
