--- a/The Next _ Cancer Can't.html
+++ b/The Next _ Cancer Can't.html
@@ -105,11 +105,11 @@
               <div class="row">
                 <div class="columns medium-6">
                   <label class="label-field">First Name:</label>
-                  <input type="text" class="input-text expand  required" name="name_first" value="" title="Please enter your first name" placeholder="">
+                  <input type="text" class="input-text expand" required name="name_first" value="" title="Please enter your first name" placeholder="">
                 </div>
                 <div class="columns medium-6">
                   <label class="label-field">Last Name:</label>
-                  <input type="text" class="input-text expand  required" name="name_last" value="" title="Please enter your last name" placeholder="">
+                  <input type="text" class="input-text expand" required name="name_last" value="" title="Please enter your last name" placeholder="">
                 </div>
               </div>
 
