Changed names and labels of goal and role checkboxes

--- a/Website HTML and PHP files/The Next _Cancer Can't.html
+++ b/Website HTML and PHP files/The Next _Cancer Can't.html
@@ -303,52 +303,52 @@
 
         <p>What phase of treatment is the person you hope to be paired with experiencing? (please select up to 2 options):
         </p>
-        <div class="options">
+        <div class="options" name='target_phase'>
             <label class="label-field">
-                <input type="checkbox" name="options[Diagnosis/Induction]">
-                Diagnosis/Induction
-            </label>
+  								<input type="checkbox" name="tartget_phase[]" value='Diagnosis'>
+  								Diagnosis/Induction
+  							</label>
             <label class="label-field">
-                <input type="checkbox" name="options[Currently Battling]">
-                Currently Battling
-            </label>
+  								<input type="checkbox" name="target_phase[]" value='currently battling'>
+  								Currently Battling
+  							</label>
             <label class="label-field">
-                <input type="checkbox" name="options[Survivor]">
-                Survivor
-            </label>
+  								<input type="checkbox" name="target_phase[]" value="survivor">
+  								Survivor
+  							</label>
             <label class="label-field">
-                <input type="checkbox" name="options[Experienced Loss]">
-                Experienced Loss
-            </label>
-        </div>
+  								<input type="checkbox" name="target_phase[]" value="experienced loss">
+  								Experienced Loss
+  							</label>
+          </div>
 
-        <p>What are you looking to get out of The Next?</p>
-        <div class="options">
+          <p>What are you looking to get out of The Next?</p>
+          <div class="options" name='target_goal'>
             <label class="label-field">
-                <input type="checkbox" name="options[Friendship]">
-                Friendship
-            </label>
+  								<input type="checkbox" name="target_goal[]" value="Friendship">
+  								Friendship
+  							</label>
             <label class="label-field">
-                <input type="checkbox" name="options[Help others]">
-                Help others
-            </label>
+  								<input type="checkbox" name="target_goal[]" value="Help Others">
+  								Help others
+  							</label>
             <label class="label-field">
-                <input type="checkbox" name="options[Find someone like me]">
-                Find someone like me
-            </label>
+  								<input type="checkbox" name="target_goal[]" value="Find somone like me">
+  								Find someone like me
+  							</label>
             <label class="label-field">
-                <input type="checkbox" name="options[Knowledge from experience]">
-                Knowledge from experience
-            </label>
+  								<input type="checkbox" name="target_goal[]" value="Knowledge from experience">
+  								Knowledge from experience
+  							</label>
             <label class="label-field">
-                <input type="checkbox" name="options[Ideas for resources]">
-                Ideas for resources
-            </label>
+  								<input type="checkbox" name="target_goal[]" value="Ideas for resources">
+  								Ideas for resources
+  							</label>
             <label class="label-field">
-                <input type="checkbox" name="options[Emotional support]">
-                Emotional support
-            </label>
-        </div>
+  								<input type="checkbox" name="target_goal[]" value="Emotional support">
+  								Emotional support
+  							</label>
+          </div>
 
         <p>Is there any other information you think The Next should know?:</p>
         <textarea class="input-text expand " name="comments" title="" style="margin: 0px; height: 72px; width: 467px;"></textarea>
