--- a/Website HTML and PHP files/The Next _ Cancer Can't.html
+++ b/Website HTML and PHP files/The Next _ Cancer Can't.html
@@ -128,7 +128,7 @@
 	<option value="36-45">36-45</option>
 	<option value="46-55">46-55</option>
     <option value="56-65">56-65</option>
-	<option value="&gt;65">&gt;65</option>
+	<option value="&gt;66">&gt;66</option>
 	</select>
 
               <label class="label-field">Your Role:</label>
@@ -249,24 +249,24 @@
         <option value="Waldenstrom_Macroglobulinemia">Waldenstrom Macroglobulinemia</option>
         <option value="Wilms_Tumor">Wilms Tumor</option>
         
-        </select></div></div>
+    </select></div></div>
 
-              <div class="columns large-20">
-    <label class="label-field">Other:</label>
-<input type="text" class="input-text expand" name="cancer-type" title="">
+    <div class="columns large-20">
+		<label class="label-field">Other:</label>
+		<input type="text" class="input-text expand" name="cancer-type" title="">
     </div>
 	
 
 
-              <p>What phase of treatment are you in?:</p>
+	  <p>What phase of treatment are you in?:</p>
 
-              <select name="treatment_phase" class="expand" required="" size="1" title="">
-  							<option value="">Choose...</option>
-  							<option value="Diagnosis/Induction">Diagnosis/Induction</option>
-  							<option value="Currently Battling">Currently Battling</option>
-  							<option value="Survivor">Survivor</option>
-  							<option value="Experienced Loss">Experienced Loss</option>
-  						</select>
+	  <select name="treatment_phase" class="expand" required="" size="1" title="">
+					<option value="">Choose...</option>
+					<option value="Diagnosis/Induction">Diagnosis/Induction</option>
+					<option value="Currently Battling">Currently Battling</option>
+					<option value="Survivor">Survivor</option>
+					<option value="Experienced Loss">Experienced Loss</option>
+				</select>
 
               <p>What is your religious preference?</p>
 <div class="row">
@@ -280,6 +280,7 @@
 	<option value="Jewish">Jewish</option>
 	<option value="Jehovah Witness">Jehovah Witness</option>
     <option value="Islam">Islam</option>
+	<option value="Muslim">Muslim</option>
     <option value="Buddhist">Buddhist</option>
     <option value="Tao">Tao</option>
     <option value="Shinto">Shinto</option>
@@ -289,8 +290,8 @@
         </select></div></div>
 
 
-              <p>If you have a blog, website, or support page, please share the link here:</p>
-              <input type="text" class="input-text expand " name="link" value="" title="" placeholder="">
+	  <p>If you have a blog, website, or support page, please share the link here:</p>
+	  <input type="text" class="input-text expand " name="link" value="" title="" placeholder="">
 
               <div class="row" <label="">Phone:
 </div>
@@ -304,7 +305,7 @@
               <p>What phase of treatment is the person you hope to be paired with experiencing? (please select up to 2 options):
               </p>
               <div class="options">
-                <label class="label-field">
+                <label class="label-field"> name='target_phase'>
   								<input type="checkbox" name="options[Diagnosis/Induction]">
   								Diagnosis/Induction
   							</label>
@@ -323,31 +324,31 @@
               </div>
 
               <p>What are you looking to get out of The Next?</p>
-              <div class="options">
-                <label class="label-field">
-  								<input type="checkbox" name="options[Friendship]">
-  								Friendship
-  							</label>
-                <label class="label-field">
-  								<input type="checkbox" name="options[Help others]">
-  								Help others
-  							</label>
-                <label class="label-field">
-  								<input type="checkbox" name="options[Find someone like me]">
-  								Find someone like me
-  							</label>
-                <label class="label-field">
-  								<input type="checkbox" name="options[Knowledge from experience]">
-  								Knowledge from experience
-  							</label>
-                <label class="label-field">
-  								<input type="checkbox" name="options[Ideas for resources]">
-  								Ideas for resources
-  							</label>
-                <label class="label-field">
-  								<input type="checkbox" name="options[Emotional support]">
-  								Emotional support
-  							</label>
+              <div class="options" name='target_goal'>
+				<label class="label-field">
+						<input type="checkbox" name="target_goal[]" value="Friendship">
+						Friendship
+								</label>
+				<label class="label-field">
+						<input type="checkbox" name="target_goal[]" value="Help Others">
+						Help others
+								</label>
+				<label class="label-field">
+						<input type="checkbox" name="target_goal[]" value="Find somone like me">
+						Find someone like me
+								</label>
+				<label class="label-field">
+						<input type="checkbox" name="target_goal[]" value="Knowledge from experience">
+						Knowledge from experience
+								</label>
+				<label class="label-field">
+						<input type="checkbox" name="target_goal[]" value="Ideas for resources">
+						Ideas for resources
+								</label>
+				<label class="label-field">
+						<input type="checkbox" name="target_goal[]" value="Emotional support">
+						Emotional support
+								</label>
               </div>
 
               <p>Is there any other information you think The Next should know?:</p>
