--- a/Website HTML and PHP files/The Next_Cancer Can't.html
+++ b/Website HTML and PHP files/The Next_Cancer Can't.html
@@ -3,7 +3,6 @@
 <!-- saved from url=(0139)file:///Z:/CS-472-1/Cancer%20Can't/Software_engineering_project-master/Website%20HTML%20and%20PHP%20files/The%20Next%20_Cancer%20Can't.html -->
 
 <html xmlns="http://www.w3.org/1999/xhtml" prefix="og: http://ogp.me/ns#" xml:lang="en" class="no-js" lang="en"><!--<![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
     <title>The Next | Cancer Can't</title>
     <meta name="description" content="The Next is a cancer based support program for patients, spouses, parents, siblings and adult children.&amp;nbsp; We understand that cancer affects everyone and not just the person with the diagnosis.&amp;nbs">
     <meta name="keywords" content="">
@@ -18,24 +17,56 @@
     <meta property="og:title" content="The Next">
     <meta property="og:description" content="The Next is a cancer based support program for patients, spouses, parents, siblings and adult children.&amp;nbsp; We understand that cancer affects everyone and not just the person with the diagnosis.&amp;nbs">
 
-    <link rel="alternate" type="application/rss+xml" title="Cancer Can&#39;t" href="http://www.cancercant.com/feed">
 
+    <link rel="alternate" type="application/rss+xml" title="Cancer Can&#39;t" href="http://www.cancercant.com/feed">	<link rel="shortcut icon" type="image/x-icon" href="http://www.cancercant.com/images/icons/favicon.ico?v=1.3.2">
+    <link rel="icon" type="image/x-icon" href="http://www.cancercant.com/images/icons/favicon.ico?v=1.3.2">
+    <link rel="apple-touch-icon-precomposed" href="http://www.cancercant.com/images/icons/icon-57px.png?v=1.3.2">
+    <link rel="apple-touch-icon-precomposed" href="http://www.cancercant.com/images/icons/icon-72px.png?v=1.3.2" sizes="72x72">
+    <link rel="apple-touch-icon-precomposed" href="http://www.cancercant.com/images/icons/icon-114px.png?v=1.3.2" sizes="114x114">
+    <link rel="apple-touch-icon-precomposed" href="http://www.cancercant.com/images/icons/icon-144px.png?v=1.3.2" sizes="144x144">
 
-</head>
+    <!-- CSS -->
+    <link rel="stylesheet" href="./The Next _ Cancer Can&#39;t_files/site.packed.css" media="all" type="text/css">
+    <link rel="stylesheet" href="./The Next _ Cancer Can&#39;t_files/print.min.css" media="print" type="text/css">
+    <link rel="stylesheet" href="./The Next _ Cancer Can&#39;t_files/fonts" media="all" type="text/css">
+    <link rel="stylesheet" href="./The Next _ Cancer Can&#39;t_files/font-awesome.min.css" media="all" type="text/css">
+    <link rel="stylesheet" href="./The Next _ Cancer Can&#39;t_files/form.min.css" media="all" type="text/css">
 
+    <!-- Javascript -->
+    <script src="./The Next _ Cancer Can&#39;t_files/site.packed.js.download" type="text/javascript"></script><meta class="foundation-data-attribute-namespace"><meta class="foundation-mq-xxlarge"><meta class="foundation-mq-xlarge-only"><meta class="foundation-mq-xlarge"><meta class="foundation-mq-large-only"><meta class="foundation-mq-large"><meta class="foundation-mq-medium-only"><meta class="foundation-mq-medium"><meta class="foundation-mq-small-only"><meta class="foundation-mq-small"><style></style>
+    <script src="./The Next _ Cancer Can&#39;t_files/jquery.form.js.download" type="text/javascript"></script>
+    <script src="./The Next _ Cancer Can&#39;t_files/jquery.validate.min.js.download" type="text/javascript"></script>
+    <script src="./The Next _ Cancer Can&#39;t_files/form.js.download" type="text/javascript"></script>
+
+    <meta class="foundation-mq-topbar"></head>
 <body class="">
 
-	<div class="header">
-		<div class="row">
-			<div class="columns">
-				<div class="wrapper">
 
-					<!-- branding -->
+<div class="header">
+    <div class="row">
+        <div class="columns">
+            <div class="wrapper">
 
-					<!-- small nav toggle -->
-					<!--<a href="#" id="nav-small-toggle" title="Show menu">Menu</a>-->
+                <!-- branding -->
+                <div class="branding">
+                    <h2>
+                        <a href="http://www.cancercant.com/" title="View our home page">Cancer Can't</a>
+                    </h2>
+                </div>
 
-				</div>
+                <!-- one menu, all sizes -->
+                <div class="nav-small-blur"></div><div class="nav">
+                <ul><li class="menu-item-1   "><a href="http://www.cancercant.com/story" title="">About</a></li><li class="menu-item-4   "><a href="http://www.cancercant.com/mission" title="">What We Do</a></li><li class="menu-item-9   "><a href="http://www.cancercant.com/events/dinner-auction" title="">Events</a></li><li class="menu-item-14   "><a href="http://www.cancercant.com/emotional-support" title="">Resources</a></li><li class="menu-item-19   "><a href="http://www.cancercant.com/sponsors" title="">Sponsors</a></li><li class="menu-item-20   "><a href="http://www.cancercant.com/contact" title="">Contact</a></li></ul>				</div>
+
+                <!-- tools -->
+                <div class="nav__tools">
+                    <a href="http://www.cancercant.com/the-next#" id="nav-small-toggle" title="Show menu"><i class="fa fa-bars"></i></a>
+                </div>
+
+                <!-- small nav toggle -->
+                <!--<a href="#" id="nav-small-toggle" title="Show menu">Menu</a>-->
+
+            </div>
         </div>
     </div>
 </div>
@@ -79,25 +110,31 @@
         }
     </style>
 
-    <div class="columns medium-8">
-        s
-			<div class="main-content-container">
-				<div class="cms-content">
-					<p><strong><em>The Next</em></strong> is a cancer based support program for patients, spouses, parents, siblings and adult children.&nbsp; We understand that cancer affects everyone and not just the person with the diagnosis.&nbsp; This is
-                    NOT a support group, but a support person.&nbsp; You are not the first cancer fighter, and sadly will not be the last.&nbsp; The goal of <strong><em>The Next</em></strong> is to help The Next one to walk your same path.&nbsp;</p>
-
-                <p>When you sign up for this program, you will be paired with a person in our program that has walked as similar a path as we can find.&nbsp; We are considering age, cancer type, stage of treatment, etc.&nbsp; You will become their <strong><em>Next</em></strong>                and they will fill a “sponsor” roll.&nbsp; They can share their personal experiences and field more personal questions that perhaps a doctor can’t answer for you.&nbsp; Example: Did you experience mucositis with chemo?&nbsp;
-                    Did you bring your children with you to transplant?&nbsp; How did you tell your family your diagnosis was terminal?&nbsp; How did you feel when your wife lost her hair?</p>
-
-                <p>Eventually our hope is that we can pair you with your <strong><em>Next</em></strong>.&nbsp; &nbsp;We believe you do not need to be past your cancer journey to support <strong><em>The Next</em></strong> one behind you.&nbsp; It can be healing
-                    to help others and share information you learned in your journey.&nbsp; This is an opportunity to not walk this path alone, but to have a hand to hold as you walk it together!</p>
-
-                <h3>Apply here:</h3>
+    <div class="row">
+        <div class="columns medium-4">
+            <div class="content_sidebar_quicklinks">
+                <a href="http://www.cancercant.com/emotional-support">Emotional Support</a>
+                <a href="http://www.cancercant.com/doctors-treatment-centers">Doctors and Treatment Centers</a>
+                <a href="http://www.cancercant.com/lodging">Lodging Program</a>
+                <a href="http://www.cancercant.com/health-fitness">Health and Fitness</a>
+                <a href="http://www.cancercant.com/transportation">Transportation Program</a>
+                <a href="http://www.cancercant.com/the-next">The Next</a>
             </div>
+        </div>
+        <div class="columns medium-8">
+            <div class="main-content-container">
+
+                <div class="cms-content">
+                    <p><strong><em>The Next</em></strong> is a cancer based support program for patients, spouses, parents, siblings and adult children.&nbsp; We understand that cancer affects everyone and not just the person with the diagnosis.&nbsp; This is NOT a support group, but a support person.&nbsp; You are not the first cancer fighter, and sadly will not be the last.&nbsp; The goal of <strong><em>The Next</em></strong> is to help The Next one to walk your same path.&nbsp;</p>
+
+                    <p>When you sign up for this program, you will be paired with a person in our program that has walked as similar a path as we can find.&nbsp; We are considering age, cancer type, stage of treatment, etc.&nbsp; You will become their <strong><em>Next</em></strong> and they will fill a “sponsor” roll.&nbsp; They can share their personal experiences and field more personal questions that perhaps a doctor can’t answer for you.&nbsp; Example: Did you experience mucositis with chemo?&nbsp; Did you bring your children with you to transplant?&nbsp; How did you tell your family your diagnosis was terminal?&nbsp; How did you feel when your wife lost her hair?</p>
+
+                    <p>Eventually our hope is that we can pair you with your <strong><em>Next</em></strong>.&nbsp; &nbsp;We believe you do not need to be past your cancer journey to support <strong><em>The Next</em></strong> one behind you.&nbsp; It can be healing to help others and share information you learned in your journey.&nbsp; This is an opportunity to not walk this path alone, but to have a hand to hold as you walk it together!</p>
+
+                    <h3>Apply here:</h3>
+                </div>
 
             <form action ="retrieve_dbData.php" method="POST">
-
-                <h2>PHP Form Validation Example</h2>
 
                 <p>Who Are You?</p>
                 <div class="row">
@@ -297,7 +334,7 @@
 
                 <div class="row" <label="">Phone:
         </div>
-				<input type="text" class="input-text expand" name="phone" value="" title="Please enter your phone number" placeholder="">
+        <input type="text" class="input-text expand" name="phone" value="" title="Please enter your phone number" placeholder="">
         <div class="row">
 
             <label class="label-field">Email Address:</label>
@@ -309,56 +346,56 @@
         </p>
         <div class="options" name='target_phase'>
             <label class="label-field">
-			<input type="checkbox" name="options[Diagnosis/Induction]">
-  								Diagnosis/Induction
-  							</label>
-                <label class="label-field">
-					<input type="checkbox" name="options[Currently Battling]">
-					Currently Battling
-				</label>
-                <label class="label-field">
-					<input type="checkbox" name="options[Survivor]">
-					Survivor
-				</label>
-                <label class="label-field">
-					<input type="checkbox" name="options[Experienced Loss]">
-					Experienced Loss
-				</label>
-          </div>
-
-          <p>What are you looking to get out of The Next?</p>
-          <div class="options" name='target_goal'>
+                <input type="checkbox" name="options[Diagnosis/Induction]">
+                Diagnosis/Induction
+            </label>
             <label class="label-field">
-				<input type="checkbox" name="target_goal[]" value="Friendship">
-				Friendship
-			</label>
-
+                <input type="checkbox" name="options[Currently Battling]">
+                Currently Battling
+            </label>
             <label class="label-field">
-				<input type="checkbox" name="target_goal[]" value="Help Others">
-				Help others
-			</label>
+                <input type="checkbox" name="options[Survivor]">
+                Survivor
+            </label>
+            <label class="label-field">
+                <input type="checkbox" name="options[Experienced Loss]">
+                Experienced Loss
+            </label>
+        </div>
+
+        <p>What are you looking to get out of The Next?</p>
+        <div class="options" name='target_goal'>
+            <label class="label-field">
+                <input type="checkbox" name="target_goal[]" value="Friendship">
+                Friendship
+            </label>
 
             <label class="label-field">
-				<input type="checkbox" name="target_goal[]" value="Find someone like me">
-				Find someone like me
-			</label>
+                <input type="checkbox" name="target_goal[]" value="Help Others">
+                Help others
+            </label>
 
             <label class="label-field">
-				<input type="checkbox" name="target_goal[]" value="Knowledge from experience">
-				Knowledge from experience
-			</label>
+                <input type="checkbox" name="target_goal[]" value="Find someone like me">
+                Find someone like me
+            </label>
 
             <label class="label-field">
-				<input type="checkbox" name="target_goal[]" value="Ideas for resources">
-				Ideas for resources
-			</label>
+                <input type="checkbox" name="target_goal[]" value="Knowledge from experience">
+                Knowledge from experience
+            </label>
 
             <label class="label-field">
-				<input type="checkbox" name="target_goal[]" value="Emotional support">
-				Emotional support
-			</label>
+                <input type="checkbox" name="target_goal[]" value="Ideas for resources">
+                Ideas for resources
+            </label>
 
-	  </div>
+            <label class="label-field">
+                <input type="checkbox" name="target_goal[]" value="Emotional support">
+                Emotional support
+            </label>
+
+        </div>
 
 
 
@@ -380,7 +417,7 @@
 
 
     <!-- footer -->
-  <div class="footer">
+    <div class="footer">
         <div class="row">
             <div class="medium-3 small-6 columns">
 
@@ -390,8 +427,8 @@
             </div>
 
             <div class="medium-6 small-12 columns">
-                
-				<div class="footer_social">
+
+                <div class="footer_social">
                     <a href="https://www.facebook.com/cancercant.info/" target="_blank"><i class="fa fa-facebook-square"></i></a>
                     <a href="https://www.instagram.com/_cancercant/" target="_blank"><i class="fa fa-instagram"></i></a>
 
