--- a/Website HTML and PHP files/The Next_Cancer Can't.html
+++ b/Website HTML and PHP files/The Next_Cancer Can't.html
@@ -346,56 +346,50 @@
         </p>
         <div class="options" name='target_phase'>
             <label class="label-field">
-                <input type="checkbox" name="options[Diagnosis/Induction]">
-                Diagnosis/Induction
-            </label>
+  								<input type="checkbox" name="target_phase[]" value='Diagnosis'>
+  								Diagnosis/Induction
+  							</label>
             <label class="label-field">
-                <input type="checkbox" name="options[Currently Battling]">
-                Currently Battling
-            </label>
+  								<input type="checkbox" name="target_phase[]" value='currently battling'>
+  								Currently Battling
+  							</label>
             <label class="label-field">
-                <input type="checkbox" name="options[Survivor]">
-                Survivor
-            </label>
+  								<input type="checkbox" name="target_phase[]" value="survivor">
+  								Survivor
+  							</label>
             <label class="label-field">
-                <input type="checkbox" name="options[Experienced Loss]">
-                Experienced Loss
-            </label>
-        </div>
+  								<input type="checkbox" name="target_phase[]" value="experienced loss">
+  								Experienced Loss
+  							</label>
+          </div>
 
-        <p>What are you looking to get out of The Next?</p>
-        <div class="options" name='target_goal'>
+          <p>What are you looking to get out of The Next?</p>
+          <div class="options" name='target_goal'>
             <label class="label-field">
-                <input type="checkbox" name="target_goal[]" value="Friendship">
-                Friendship
-            </label>
-
+  								<input type="checkbox" name="target_goal[]" value="Friendship">
+  								Friendship
+  							</label>
             <label class="label-field">
-                <input type="checkbox" name="target_goal[]" value="Help Others">
-                Help others
-            </label>
-
+  								<input type="checkbox" name="target_goal[]" value="Help Others">
+  								Help others
+  							</label>
             <label class="label-field">
-                <input type="checkbox" name="target_goal[]" value="Find someone like me">
-                Find someone like me
-            </label>
-
+  								<input type="checkbox" name="target_goal[]" value="Find somone like me">
+  								Find someone like me
+  							</label>
             <label class="label-field">
-                <input type="checkbox" name="target_goal[]" value="Knowledge from experience">
-                Knowledge from experience
-            </label>
-
+  								<input type="checkbox" name="target_goal[]" value="Knowledge from experience">
+  								Knowledge from experience
+  							</label>
             <label class="label-field">
-                <input type="checkbox" name="target_goal[]" value="Ideas for resources">
-                Ideas for resources
-            </label>
-
+  								<input type="checkbox" name="target_goal[]" value="Ideas for resources">
+  								Ideas for resources
+  							</label>
             <label class="label-field">
-                <input type="checkbox" name="target_goal[]" value="Emotional support">
-                Emotional support
-            </label>
-
-        </div>
+  								<input type="checkbox" name="target_goal[]" value="Emotional support">
+  								Emotional support
+  							</label>
+          </div>
 
 
 
