--- a/Website HTML and PHP files/The Next_Cancer Can't.html
+++ b/Website HTML and PHP files/The Next_Cancer Can't.html
@@ -3,42 +3,43 @@
 <!-- saved from url=(0139)file:///Z:/CS-472-1/Cancer%20Can't/Software_engineering_project-master/Website%20HTML%20and%20PHP%20files/The%20Next%20_Cancer%20Can't.html -->
 
 <html xmlns="http://www.w3.org/1999/xhtml" prefix="og: http://ogp.me/ns#" xml:lang="en" class="no-js" lang="en"><!--<![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>The Next | Cancer Can't</title>
-    <meta name="description" content="The Next is a cancer based support program for patients, spouses, parents, siblings and adult children.&amp;nbsp; We understand that cancer affects everyone and not just the person with the diagnosis.&amp;nbs">
-    <meta name="keywords" content="">
-    <meta name="application-name" content="Cancer Can&#39;t 1.3.2">
-    <meta name="robots" content="INDEX, FOLLOW">
+	
+	<title>The Next | Cancer Can't</title>
+	<meta name="description" content="The Next is a cancer based support program for patients, spouses, parents, siblings and adult children.&amp;nbsp; We understand that cancer affects everyone and not just the person with the diagnosis.&amp;nbs">
+	<meta name="keywords" content="">
+	<meta name="application-name" content="Cancer Can&#39;t 1.3.2">
+			<meta name="robots" content="INDEX, FOLLOW">
+	
+	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+	<meta property="og:site_name" content="Cancer Can&#39;t">
+<meta property="og:image" content="http://www.cancercant.com/images/icons/icon-1024px.png">
+<meta property="og:url" content="http://www.cancercant.com/the-next">
+<meta property="og:title" content="The Next">
+<meta property="og:description" content="The Next is a cancer based support program for patients, spouses, parents, siblings and adult children.&amp;nbsp; We understand that cancer affects everyone and not just the person with the diagnosis.&amp;nbs">
 
-    <meta property="og:site_name" content="Cancer Can&#39;t">
-    <meta property="og:image" content="http://www.cancercant.com/images/icons/icon-1024px.png">
-    <meta property="og:url" content="http://www.cancercant.com/the-next">
-    <meta property="og:title" content="The Next">
-    <meta property="og:description" content="The Next is a cancer based support program for patients, spouses, parents, siblings and adult children.&amp;nbsp; We understand that cancer affects everyone and not just the person with the diagnosis.&amp;nbs">
+		
+			<link rel="alternate" type="application/rss+xml" title="Cancer Can&#39;t" href="http://www.cancercant.com/feed">	<link rel="shortcut icon" type="image/x-icon" href="http://www.cancercant.com/images/icons/favicon.ico?v=1.3.2">
+	<link rel="icon" type="image/x-icon" href="http://www.cancercant.com/images/icons/favicon.ico?v=1.3.2">
+	<link rel="apple-touch-icon-precomposed" href="http://www.cancercant.com/images/icons/icon-57px.png?v=1.3.2">
+	<link rel="apple-touch-icon-precomposed" href="http://www.cancercant.com/images/icons/icon-72px.png?v=1.3.2" sizes="72x72">
+	<link rel="apple-touch-icon-precomposed" href="http://www.cancercant.com/images/icons/icon-114px.png?v=1.3.2" sizes="114x114">
+	<link rel="apple-touch-icon-precomposed" href="http://www.cancercant.com/images/icons/icon-144px.png?v=1.3.2" sizes="144x144">
 
+	<!-- CSS -->
+	<link rel="stylesheet" href="./The Next _ Cancer Can&#39;t_files/site.packed.css" media="all" type="text/css">
+<link rel="stylesheet" href="./The Next _ Cancer Can&#39;t_files/print.min.css" media="print" type="text/css">
+<link rel="stylesheet" href="./The Next _ Cancer Can&#39;t_files/fonts" media="all" type="text/css">
+<link rel="stylesheet" href="./The Next _ Cancer Can&#39;t_files/font-awesome.min.css" media="all" type="text/css">
+<link rel="stylesheet" href="./The Next _ Cancer Can&#39;t_files/form.min.css" media="all" type="text/css">
 
-    <link rel="alternate" type="application/rss+xml" title="Cancer Can&#39;t" href="http://www.cancercant.com/feed">	<link rel="shortcut icon" type="image/x-icon" href="http://www.cancercant.com/images/icons/favicon.ico?v=1.3.2">
-    <link rel="icon" type="image/x-icon" href="http://www.cancercant.com/images/icons/favicon.ico?v=1.3.2">
-    <link rel="apple-touch-icon-precomposed" href="http://www.cancercant.com/images/icons/icon-57px.png?v=1.3.2">
-    <link rel="apple-touch-icon-precomposed" href="http://www.cancercant.com/images/icons/icon-72px.png?v=1.3.2" sizes="72x72">
-    <link rel="apple-touch-icon-precomposed" href="http://www.cancercant.com/images/icons/icon-114px.png?v=1.3.2" sizes="114x114">
-    <link rel="apple-touch-icon-precomposed" href="http://www.cancercant.com/images/icons/icon-144px.png?v=1.3.2" sizes="144x144">
+	<!-- Javascript -->
+	<script src="./The Next _ Cancer Can&#39;t_files/site.packed.js.download" type="text/javascript"></script><meta class="foundation-data-attribute-namespace"><meta class="foundation-mq-xxlarge"><meta class="foundation-mq-xlarge-only"><meta class="foundation-mq-xlarge"><meta class="foundation-mq-large-only"><meta class="foundation-mq-large"><meta class="foundation-mq-medium-only"><meta class="foundation-mq-medium"><meta class="foundation-mq-small-only"><meta class="foundation-mq-small"><style></style>
+<script src="./The Next _ Cancer Can&#39;t_files/jquery.form.js.download" type="text/javascript"></script>
+<script src="./The Next _ Cancer Can&#39;t_files/jquery.validate.min.js.download" type="text/javascript"></script>
+<script src="./The Next _ Cancer Can&#39;t_files/form.js.download" type="text/javascript"></script>
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="./The Next _ Cancer Can&#39;t_files/site.packed.css" media="all" type="text/css">
-    <link rel="stylesheet" href="./The Next _ Cancer Can&#39;t_files/print.min.css" media="print" type="text/css">
-    <link rel="stylesheet" href="./The Next _ Cancer Can&#39;t_files/fonts" media="all" type="text/css">
-    <link rel="stylesheet" href="./The Next _ Cancer Can&#39;t_files/font-awesome.min.css" media="all" type="text/css">
-    <link rel="stylesheet" href="./The Next _ Cancer Can&#39;t_files/form.min.css" media="all" type="text/css">
-
-    <!-- Javascript -->
-    <script src="./The Next _ Cancer Can&#39;t_files/site.packed.js.download" type="text/javascript"></script><meta class="foundation-data-attribute-namespace"><meta class="foundation-mq-xxlarge"><meta class="foundation-mq-xlarge-only"><meta class="foundation-mq-xlarge"><meta class="foundation-mq-large-only"><meta class="foundation-mq-large"><meta class="foundation-mq-medium-only"><meta class="foundation-mq-medium"><meta class="foundation-mq-small-only"><meta class="foundation-mq-small"><style></style>
-    <script src="./The Next _ Cancer Can&#39;t_files/jquery.form.js.download" type="text/javascript"></script>
-    <script src="./The Next _ Cancer Can&#39;t_files/jquery.validate.min.js.download" type="text/javascript"></script>
-    <script src="./The Next _ Cancer Can&#39;t_files/form.js.download" type="text/javascript"></script>
-
-    <meta class="foundation-mq-topbar"></head>
+<meta class="foundation-mq-topbar"></head>
 <body class="">
 
 
@@ -410,47 +411,60 @@
 
 
 
-    <!-- footer -->
-    <div class="footer">
-        <div class="row">
-            <div class="medium-3 small-6 columns">
+   <div class="footer">
+	<div class="row">
+		<div class="medium-3 small-6 columns">
+			<div class="footer_quicklinks">
+									<a href="https://cancercant.ejoinme.org/donations2018" title="">Donate</a>
+									<a href="http://www.cancercant.com/news" title="Cancer Can&#39;t News">News</a>
+									<a href="http://www.cancercant.com/volunteer" title="">Volunteer</a>
+									<a href="http://www.cancercant.com/donate-item" title="">Donate Auction Item</a>
+									<a href="http://www.cancercant.com/products" title="Help us raise money and awareness for the cause by purchasing Cancer Can&#39;t Apparel.">Apparel</a>
+							</div>
+		</div>
+		<div class="medium-3 small-6 columns">
 
-            </div>
-            <div class="medium-3 small-6 columns">
+			<div class="footer_nav">
+									<a href="http://www.cancercant.com/story" title="">About</a>
+									<a href="http://www.cancercant.com/mission" title="">What We Do</a>
+									<a href="http://www.cancercant.com/events/dinner-auction" title="">Events</a>
+									<a href="http://www.cancercant.com/emotional-support" title="">Resources</a>
+									<a href="http://www.cancercant.com/sponsors" title="">Sponsors</a>
+									<a href="http://www.cancercant.com/contact" title="">Contact</a>
+							</div>
+		</div>
 
-            </div>
+		<div class="medium-6 small-12 columns">
 
-            <div class="medium-6 small-12 columns">
+			<div class="footer_social">
+				<a href="https://www.facebook.com/cancercant.info/" target="_blank"><i class="fa fa-facebook-square"></i></a>
+				<a href="https://www.instagram.com/_cancercant/" target="_blank"><i class="fa fa-instagram"></i></a>
 
-                <div class="footer_social">
-                    <a href="https://www.facebook.com/cancercant.info/" target="_blank"><i class="fa fa-facebook-square"></i></a>
-                    <a href="https://www.instagram.com/_cancercant/" target="_blank"><i class="fa fa-instagram"></i></a>
+				<form action="http://cancercant.us13.list-manage.com/subscribe/post?u=9ad79fa54b67f1761e1011a7b&amp;id=69c105ee56" method="post" class="footer_signup">
+					<input type="text" name="EMAIL" class="footer_signup__email" placeholder="Email address...">
+					<input type="submit" class="footer_signup__submit" value="Join" name="subscribe">
+				</form>
+			</div>
 
-                </div>
+			<div class="footer-info">
+		            <span class="legal">
+		              <span class="copyright">©</span> Copyright 2018 by Cancer Can't			            <span class="divider">/</span>		            </span>
+				<span class="links"></span>
+		            <span class="user">
+		            			            <a class="login" href="http://www.cancercant.com/cms/siteuser/login.php" target="_blank">Login</a>
+		            		            </span>
+			</div>
 
-                <div class="footer-info">
-                  <span class="legal">
-                <span class="copyright">©</span> Copyright 2018 by Cancer Can't <span class="divider">/</span> </span>
-                    <span class="links"></span>
-                    <span class="user">
-                            <a class="login" href="file:///C:/cms/siteuser/login.php" target="_blank">Login</a>
-                              </span>
-                </div>
+			<!-- designer link -->
+			<div class="designer-link">
+				<a href="http://www.philsandifur.com/" title="Visit PhilSandifur.com"><img src="./The Next _ Cancer Can&#39;t_files/PhilSandifur-small-black-transparent.png" alt="Spokane Website Design" width="120" height="30"></a>
+			</div>
+
+		</div>
+	</div>
+</div>
+
+<script>$(document).foundation();</script>
 
 
-
-                <!-- designer link -->
-                <div class="designer-link">
-                    <a href="http://www.philsandifur.com/" title="Visit PhilSandifur.com"><img src="file:///C:/images/PhilSandifur-small-black-transparent.png" alt="Spokane Website Design" width="120" height="30"></a>
-                </div>
-
-            </div>
-        </div>
-    </div>
-
-    <script>
-        $(document).foundation();
-    </script>
-
-</div></div></div>
 </body></html>
